<?xml version="1.0" encoding="utf-8"?>

<!--    - наименование миссии-->
<!--    - логотип (links.patch.large)-->
<!--    - количество повторных использований первой ступени (cores.flight)-->
<!--    - статус миссии (success)-->
<!--    - детали (details)-->
<!--    - дата и время миссии в формате ЧЧ-ММ ДД-ММ-ГГГГ-->
<!--    - список экипажа: ФИО, агенство, статус (https://api.spacexdata.com/v4/crew)-->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/fl_loader_block"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_error_block"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_error_text_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/grey_light_1"
                android:text="Ошибка загрузки страницы"/>
        </LinearLayout>
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_maim_block_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.page.PageFragment">

            <ImageView
                android:id="@+id/iv_large_logo_mission"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/large_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/line_center_horizontal"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/line_center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="336dp" />

            <LinearLayout
                android:id="@+id/ll_data_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_large_logo_mission">

                <TextView
                    android:id="@+id/tv_name_mission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_bold"
                    android:textSize="26sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="Название"/>

                <TextView
                    android:id="@+id/tv_date_mission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status_mission"
                    android:fontFamily="@font/font_bold"
                    android:textSize="14sp"
                    android:textColor="@color/grey_light_text"
                    android:text="2022-10-20"/>

                <TextView
                    android:id="@+id/tv_status_mission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_semi_bold"
                    android:textSize="14sp"
                    android:textColor="@color/grey_light_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_cores_flight"
                    android:text="Статус миссии: Успешная"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_block_cores_flight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/rectangle_rounded_all"
                android:backgroundTint="@color/grey_light_2"
                app:layout_constraintTop_toBottomOf="@+id/ll_data_block"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/tv_cores_flight_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_bold"
                    android:textSize="34sp"
                    android:textColor="@color/black"
                    android:padding="16dp"
                    android:text="2"/>

                <TextView
                    android:id="@+id/tv_cores_flight_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:padding="16dp"
                    android:fontFamily="@font/font_medium"
                    android:textSize="14sp"
                    android:textColor="@color/grey_light_text"
                    android:text="@string/cores_flight_page"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_block_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="34dp"
                android:padding="16dp"
                android:orientation="vertical"
                android:background="@drawable/rectangle_rounded_all"
                android:backgroundTint="@color/grey_light_2"
                app:layout_constraintTop_toBottomOf="@+id/ll_block_cores_flight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tv_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/details_page"/>
                <TextView
                    android:id="@+id/tv_details_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/font_medium"
                    android:textSize="11sp"
                    android:textColor="@color/grey_light_text"
                    android:text="@string/large_text"/>
            </LinearLayout>


            <TextView
                android:id="@+id/tv_crews_title_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/font_bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_block_details"
                android:text="@string/title_crews_page"
                />

            <LinearLayout
                android:id="@+id/ll_error_crews_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="60dp"
                android:padding="16dp"
                android:background="@drawable/rectangle_rounded_all"
                android:backgroundTint="@color/grey_light_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_crews_title_page"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:fontFamily="@font/font_medium"
                    android:textSize="14sp"
                    android:textColor="@color/grey_light_text"
                    android:text="@string/error_load_list_crews"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/font_medium"
                    android:text="@string/repeat_btn"/>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressbar_load_crew_list"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_crews_title_page"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="60dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/rv_crews_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_crews_title_page"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/crew_item"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>